--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,77 @@ body .form_container .form input:focus {
   outline: none;
 }
 
+body .form_container .form div {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .form_container .form div [type="radio"]:checked,
+body .form_container .form div [type="radio"]:not(:checked) {
+  position: absolute;
+  left: -9999px;
+}
+
+body .form_container .form div [type="radio"]:checked + label,
+body .form_container .form div [type="radio"]:not(:checked) + label {
+  position: relative;
+  padding-left: 28px;
+  cursor: pointer;
+  line-height: 20px;
+  display: inline-block;
+}
+
+body .form_container .form div [type="radio"]:checked + label:before,
+body .form_container .form div [type="radio"]:not(:checked) + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18px;
+  height: 18px;
+  border: 1px solid white;
+  border-radius: 100%;
+  background: transparent;
+}
+
+body .form_container .form div [type="radio"]:checked + label:after,
+body .form_container .form div [type="radio"]:not(:checked) + label:after {
+  content: '';
+  width: 12px;
+  height: 12px;
+  background: white;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+body .form_container .form div [type="radio"]:not(:checked) + label:after {
+  opacity: 0;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+
+body .form_container .form div [type="radio"]:checked + label:after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
 body .confirmation {
   text-align: center;
 }
